Add cdc.config file from mpxvassembly pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -185,6 +185,9 @@ manifest {
     version         = '1.0dev'
 }
 
+// Load CDC config for operating on internal compute infrastructure
+includeConfig 'conf/cdc.config'
+
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
 def check_max(obj, type) {
